@@ -44,12 +44,12 @@ import hudson.util.FormValidation;
 import hudson.util.HttpResponses;
 import hudson.util.TextFile;
 import hudson.util.VersionNumber;
-import io.jenkins.lib.versionnumber.JavaSpecificationVersion;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -80,7 +80,6 @@ import jenkins.security.UpdateSiteWarningsMonitor;
 import jenkins.util.JSONSignatureValidator;
 import jenkins.util.PluginLabelUtil;
 import jenkins.util.SystemProperties;
-import jenkins.util.java.JavaUtils;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONException;
 import net.sf.json.JSONObject;
@@ -106,6 +105,7 @@ import org.kohsuke.stapler.interceptor.RequirePOST;
  * @since 1.333
  */
 @ExportedBean
+@SuppressFBWarnings(value = "THROWS_METHOD_THROWS_CLAUSE_BASIC_EXCEPTION", justification = "TODO needs triage")
 public class UpdateSite {
     /**
      * What's the time stamp of data file?
@@ -216,7 +216,7 @@ public class UpdateSite {
 
     @Restricted(NoExternalUse.class)
     public @NonNull FormValidation updateDirectlyNow(boolean signatureCheck) throws IOException {
-        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), "UTF-8") + "&version=" + URLEncoder.encode(Jenkins.VERSION, "UTF-8"))), signatureCheck);
+        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), StandardCharsets.UTF_8) + "&version=" + URLEncoder.encode(Jenkins.VERSION, StandardCharsets.UTF_8))), signatureCheck);
     }
 
     private FormValidation updateData(String json, boolean signatureCheck)
@@ -529,17 +529,14 @@ public class UpdateSite {
 
     /**
      * Is this the legacy default update center site?
+     * @deprecated
+     *      Will be removed, currently returns always false.
+     * @since 2.343
      */
+    @Deprecated
+    @Restricted(NoExternalUse.class)
     public boolean isLegacyDefault() {
-        return isHudsonCI() || isUpdatesFromHudsonLabs();
-    }
-
-    private boolean isHudsonCI() {
-        return url != null && UpdateCenter.PREDEFINED_UPDATE_SITE_ID.equals(id) && url.startsWith("http://hudson-ci.org/");
-    }
-
-    private boolean isUpdatesFromHudsonLabs() {
-        return url != null && url.startsWith("http://updates.hudson-labs.org/");
+        return false;
     }
 
     /**
@@ -801,7 +798,7 @@ public class UpdateSite {
          * Size of the file being advertised in bytes, or {@code null} if unspecified/unknown.
          * @return size of the file if known, {@code null} otherwise.
          *
-         * @since TODO
+         * @since 2.325
          */
         // @Exported -- TODO unsure
         @Restricted(NoExternalUse.class)
@@ -897,6 +894,13 @@ public class UpdateSite {
         }
     }
 
+    @Restricted(NoExternalUse.class)
+    public enum WarningType {
+        CORE,
+        PLUGIN,
+        UNKNOWN
+    }
+
     /**
      * Represents a warning about a certain component, mostly related to known security issues.
      *
@@ -906,19 +910,13 @@ public class UpdateSite {
      * @since 2.40
      */
     @Restricted(NoExternalUse.class)
-    public static final class Warning {
-
-        public enum Type {
-            CORE,
-            PLUGIN,
-            UNKNOWN
-        }
+    public final class Warning {
 
         /**
          * The type classifier for this warning.
          */
         @NonNull
-        public /* final */ Type type;
+        public /* final */ WarningType type;
 
         /**
          * The globally unique ID of this warning.
@@ -973,9 +971,9 @@ public class UpdateSite {
         @Restricted(NoExternalUse.class)
         public Warning(JSONObject o) {
             try {
-                this.type = Type.valueOf(o.getString("type").toUpperCase(Locale.US));
+                this.type = WarningType.valueOf(o.getString("type").toUpperCase(Locale.US));
             } catch (IllegalArgumentException ex) {
-                this.type = Type.UNKNOWN;
+                this.type = WarningType.UNKNOWN;
             }
             this.id = o.getString("id");
             this.component = Util.intern(o.getString("name"));
@@ -1017,7 +1015,7 @@ public class UpdateSite {
         }
 
         public boolean isPluginWarning(@NonNull String pluginName) {
-            return type == Type.PLUGIN && pluginName.equals(this.component);
+            return type == WarningType.PLUGIN && pluginName.equals(this.component);
         }
 
         /**
@@ -1028,11 +1026,7 @@ public class UpdateSite {
             switch (this.type) {
                 case CORE:
                     VersionNumber current = Jenkins.getVersion();
-
-                    if (!isRelevantToVersion(current)) {
-                        return false;
-                    }
-                    return true;
+                    return isRelevantToVersion(current);
                 case PLUGIN:
 
                     // check whether plugin is installed
@@ -1050,6 +1044,40 @@ public class UpdateSite {
                 case UNKNOWN:
                 default:
                     return false;
+            }
+        }
+
+        /**
+         * Returns whether this warning is fixable by updating the affected component.
+         * @return {@code true} if the warning does not apply to the latest offered version of core or the affected plugin;
+         * {@code false} if it does; and {@code null} when the affected component isn't being offered, or it's a warning
+         * for something other than core or a plugin.
+         */
+        @SuppressFBWarnings(value = "NP_BOOLEAN_RETURN_NULL")
+        public Boolean isFixable() {
+            final Data data = UpdateSite.this.data;
+            if (data == null) {
+                return null;
+            }
+            switch (this.type) {
+                case CORE: {
+                    final Entry core = data.core;
+                    if (core == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(core.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                case PLUGIN: {
+                    final Entry plugin = data.plugins.get(component);
+                    if (plugin == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(plugin.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                default:
+                    return null;
             }
         }
 
@@ -1145,13 +1173,6 @@ public class UpdateSite {
         @Exported
         public final String requiredCore;
         /**
-         * Version of Java this plugin requires to run.
-         *
-         * @since 2.158
-         */
-        @Exported
-        public final String minimumJavaVersion;
-        /**
          * Categories for grouping plugins, taken from labels assigned to wiki page.
          * Can be {@code null} if the update center does not return categories.
          */
@@ -1214,7 +1235,6 @@ public class UpdateSite {
             this.title = get(o, "title");
             this.excerpt = get(o, "excerpt");
             this.compatibleSinceVersion = Util.intern(get(o, "compatibleSinceVersion"));
-            this.minimumJavaVersion = Util.intern(get(o, "minimumJavaVersion"));
             this.latest = get(o, "latest");
             this.requiredCore = Util.intern(get(o, "requiredCore"));
             final String releaseTimestamp = get(o, "releaseTimestamp");
@@ -1227,7 +1247,7 @@ public class UpdateSite {
                 }
             }
             final String popularityFromJson = get(o, "popularity");
-            Double popularity = 0.0;
+            double popularity = 0.0;
             if (popularityFromJson != null) {
                 try {
                     popularity = Double.parseDouble(popularityFromJson);
@@ -1304,9 +1324,9 @@ public class UpdateSite {
 
         @Restricted(NoExternalUse.class) // table.jelly
         public boolean isCompatible(PluginManager.MetadataCache cache) {
-            return isCompatibleWithInstalledVersion() && !isForNewerHudson() &&  !isForNewerJava() &&
+            return isCompatibleWithInstalledVersion() && !isForNewerHudson() &&
                     isNeededDependenciesCompatibleWithInstalledVersion(cache) &&
-                    !isNeededDependenciesForNewerJenkins(cache) && !isNeededDependenciesForNewerJava();
+                    !isNeededDependenciesForNewerJenkins(cache);
         }
 
         /**
@@ -1390,21 +1410,6 @@ public class UpdateSite {
             }
         }
 
-        /**
-         * Returns true iff the plugin declares a minimum Java version and it's newer than what the Jenkins master is running on.
-         * @since 2.158
-         */
-        public boolean isForNewerJava() {
-            try {
-                final JavaSpecificationVersion currentRuntimeJavaVersion = JavaUtils.getCurrentJavaRuntimeVersionNumber();
-                return minimumJavaVersion != null && new JavaSpecificationVersion(minimumJavaVersion).isNewerThan(
-                        currentRuntimeJavaVersion);
-            } catch (NumberFormatException nfe) {
-                logBadMinJavaVersion();
-                return false; // treat this as undeclared minimum Java version
-            }
-        }
-
         public VersionNumber getNeededDependenciesRequiredCore() {
             VersionNumber versionNumber = null;
             try {
@@ -1417,36 +1422,6 @@ public class UpdateSite {
                 if (versionNumber == null || v.isNewerThan(versionNumber)) versionNumber = v;
             }
             return versionNumber;
-        }
-
-        /**
-         * Returns the minimum Java version needed to use the plugin and all its dependencies.
-         * @since 2.158
-         * @return the minimum Java version needed to use the plugin and all its dependencies, or null if unspecified.
-         */
-        @CheckForNull
-        public VersionNumber getNeededDependenciesMinimumJavaVersion() {
-            VersionNumber versionNumber = null;
-            try {
-                versionNumber = minimumJavaVersion == null ? null : new VersionNumber(minimumJavaVersion);
-            } catch (NumberFormatException nfe) {
-                logBadMinJavaVersion();
-            }
-            for (Plugin p : getNeededDependencies()) {
-                VersionNumber v = p.getNeededDependenciesMinimumJavaVersion();
-                if (v == null) {
-                    continue;
-                }
-                if (versionNumber == null || v.isNewerThan(versionNumber)) {
-                    versionNumber = v;
-                }
-            }
-            return versionNumber;
-        }
-
-        private void logBadMinJavaVersion() {
-            LOGGER.log(Level.WARNING, "minimumJavaVersion was specified for plugin {0} but unparseable (received {1})",
-                       new String[]{this.name, this.minimumJavaVersion});
         }
 
         public boolean isNeededDependenciesForNewerJenkins() {
@@ -1463,20 +1438,6 @@ public class UpdateSite {
                 }
                 return false;
             });
-        }
-
-        /**
-         * Returns true iff any of the plugin dependencies require a newer Java than Jenkins is running on.
-         *
-         * @since 2.158
-         */
-        public boolean isNeededDependenciesForNewerJava() {
-            for (Plugin p : getNeededDependencies()) {
-                if (p.isForNewerJava() || p.isNeededDependenciesForNewerJava()) {
-                    return true;
-                }
-            }
-            return false;
         }
 
         /**
