@@ -26,8 +26,6 @@ package hudson.util;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.awt.Color;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.jfree.chart.renderer.category.LineAndShapeRenderer;
 
@@ -37,23 +35,23 @@ import org.jfree.chart.renderer.category.LineAndShapeRenderer;
  * @author Kohsuke Kawaguchi
  */
 public class ColorPalette {
-    public static final Color RED = new Color(0xEF, 0x29, 0x29);
-    public static final Color YELLOW = new Color(0xFC, 0xE9, 0x4F);
-    public static final Color BLUE = new Color(0x72, 0x9F, 0xCF);
-    public static final Color GREY = new Color(0xAB, 0xAB, 0xAB);
-    public static final Color DARK_GREY = new Color(0x77, 0x77, 0x77);
+    public static final Color RED = new Color(0xcc, 0x00, 0x03);
+    public static final Color YELLOW = new Color(0xff, 0x98, 0x00);
+    public static final Color BLUE = new Color(0x13, 0X83, 0X47);
+    public static final Color GREY = new Color(0x96, 0x96, 0x96);
+    public static final Color DARK_GREY = new Color(0x33, 0x33, 0x33);
     public static final Color LIGHT_GREY = new Color(0xcc, 0xcc, 0xcc);
 
     /**
      * Color list usable for generating line charts.
      */
     @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "used in several plugins")
-    public static List<Color> LINE_GRAPH = Collections.unmodifiableList(Arrays.asList(
+    public static List<Color> LINE_GRAPH = List.of(
         new Color(0xCC0000),
         new Color(0x3465a4),
         new Color(0x73d216),
         new Color(0xedd400)
-    ));
+    );
 
     /**
      * Applies {@link #LINE_GRAPH} colors to the given renderer.
