@@ -24,6 +24,7 @@
 
 package hudson.model;
 
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.notNullValue;
@@ -34,8 +35,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
 import com.gargoylesoftware.htmlunit.Page;
@@ -56,18 +57,18 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.nio.file.Files;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
 import jenkins.fingerprints.FileFingerprintStorage;
 import jenkins.model.FingerprintFacet;
 import jenkins.model.Jenkins;
-import org.apache.commons.io.FileUtils;
 import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Rule;
@@ -120,7 +121,6 @@ public class FingerprintTest {
         f.facets.setOwner(Saveable.NOOP);
         f.facets.add(new TestFacet(f, 123, "val"));
         f.save();
-        //System.out.println(FileUtils.readFileToString(xml));
         f2 = Fingerprint.load(SOME_MD5);
         assertEquals(f.toString(), f2.toString());
         assertEquals(1, f2.facets.size());
@@ -193,13 +193,8 @@ public class FingerprintTest {
     public void shouldThrowIOExceptionWhenFileIsInvalid() throws Exception {
         XmlFile f = new XmlFile(new File(rule.jenkins.getRootDir(), "foo.xml"));
         f.write("Hello, world!");
-        try {
-            FileFingerprintStorage.load(f.getFile());
-        } catch (IOException ex) {
-            assertThat(ex.getMessage(), containsString("Unexpected Fingerprint type"));
-            return;
-        }
-        fail("Expected IOException");
+        IOException e = assertThrows(IOException.class, () -> FileFingerprintStorage.load(f.getFile()));
+        assertThat(e.getMessage(), containsString("Unexpected Fingerprint type"));
     }
 
     @Test
@@ -491,7 +486,7 @@ public class FingerprintTest {
         Fingerprint fp = getFingerprint(build, "test.txt");
         File sourceFile = new File(rule.jenkins.getRootDir(), "config.xml");
         File targetFile = new File(rule.jenkins.getRootDir(), "../cf3.xml");
-        Util.copyFile(sourceFile, targetFile);
+        Files.copy(sourceFile.toPath(), targetFile.toPath(), REPLACE_EXISTING);
         targetFile.deleteOnExit();
         String first = fp.getHashString().substring(0, 2);
         String second = fp.getHashString().substring(2, 4);
@@ -518,7 +513,7 @@ public class FingerprintTest {
         Fingerprint fp = getFingerprint(build, "test.txt");
         File sourceFile = new File(rule.jenkins.getRootDir(), "config.xml");
         File targetFile = new File(rule.jenkins.getRootDir(), "../cf4.xml");
-        Util.copyFile(sourceFile, targetFile);
+        Files.copy(sourceFile.toPath(), targetFile.toPath(), REPLACE_EXISTING);
         targetFile.deleteOnExit();
         String first = fp.getHashString().substring(0, 2);
         String second = fp.getHashString().substring(2, 4);
@@ -573,7 +568,7 @@ public class FingerprintTest {
 
         Fingerprint fp = getFingerprint(build, "test.txt");
         File targetFile = new File(rule.jenkins.getRootDir(), "../cf7.xml");
-        FileUtils.writeStringToFile(targetFile, TEST_FINGERPRINT_CONFIG_FILE_CONTENT, StandardCharsets.UTF_8);
+        Files.writeString(targetFile.toPath(), TEST_FINGERPRINT_CONFIG_FILE_CONTENT, StandardCharsets.UTF_8);
         targetFile.deleteOnExit();
 
         String first = fp.getHashString().substring(0, 2);
@@ -650,7 +645,7 @@ public class FingerprintTest {
         assertThat("Cannot assign the property twice", job.getProperty(AuthorizationMatrixProperty.class), nullValue());
 
         Map<Permission, Set<String>> permissions = new HashMap<>();
-        HashSet<String> userSpec = new HashSet<>(Collections.singletonList(username));
+        HashSet<String> userSpec = new HashSet<>(List.of(username));
 
         for (Permission p : s) {
             permissions.put(p, userSpec);
