@@ -32,8 +32,9 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import java.io.File;
-import org.apache.commons.io.FileUtils;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.For;
@@ -54,7 +55,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("whitelist_empty")
-    public void userControlledWhitelist_empty_Loading() throws Exception {
+    public void userControlledWhitelist_empty_Loading() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(
                 wl.decide("public java.lang.Object jenkins.security.stapler.StaticRoutingDecisionProviderTest$ContentProvider.getObjectCustom()"),
@@ -68,7 +69,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("whitelist_monoline")
-    public void userControlledWhitelist_monoline_Loading() throws Exception {
+    public void userControlledWhitelist_monoline_Loading() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(
                 wl.decide("method jenkins.security.stapler.StaticRoutingDecisionProviderTest$ContentProvider getObjectCustom"),
@@ -82,7 +83,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("whitelist_multiline")
-    public void userControlledWhitelist_multiline_Loading() throws Exception {
+    public void userControlledWhitelist_multiline_Loading() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(
                 wl.decide("method jenkins.security.stapler.StaticRoutingDecisionProviderTest$ContentProvider getObjectCustom"),
@@ -100,7 +101,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("comment_ignored")
-    public void userControlledWhitelist_commentsAreIgnored() throws Exception {
+    public void userControlledWhitelist_commentsAreIgnored() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(wl.decide("this line is not read"), is(RoutingDecisionProvider.Decision.UNKNOWN));
         assertThat(wl.decide("not-this-one"), is(RoutingDecisionProvider.Decision.UNKNOWN));
@@ -113,7 +114,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("whitelist_emptyline")
-    public void userControlledWhitelist_emptyLinesAreIgnored() throws Exception {
+    public void userControlledWhitelist_emptyLinesAreIgnored() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(wl.decide("signature-1"), is(RoutingDecisionProvider.Decision.ACCEPTED));
         assertThat(wl.decide("signature-2"), is(RoutingDecisionProvider.Decision.ACCEPTED));
@@ -124,7 +125,7 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     @LocalData("greylist_multiline")
-    public void userControlledWhitelist_whiteAndBlack() throws Exception {
+    public void userControlledWhitelist_whiteAndBlack() {
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
         assertThat(wl.decide("signature-1-ok"), is(RoutingDecisionProvider.Decision.ACCEPTED));
         assertThat(wl.decide("signature-3-ok"), is(RoutingDecisionProvider.Decision.ACCEPTED));
@@ -163,26 +164,26 @@ public class StaticRoutingDecisionProvider2Test {
 
     @Test
     public void userControlledWhitelist_savedCorrectly() throws Exception {
-        File whitelistUserControlledList = new File(j.jenkins.getRootDir(), "stapler-whitelist.txt");
+        Path whitelistUserControlledList = j.jenkins.getRootDir().toPath().resolve("stapler-whitelist.txt");
 
-        assertFalse(whitelistUserControlledList.exists());
+        assertFalse(Files.exists(whitelistUserControlledList));
 
         StaticRoutingDecisionProvider wl = new StaticRoutingDecisionProvider();
 
-        assertFalse(whitelistUserControlledList.exists());
+        assertFalse(Files.exists(whitelistUserControlledList));
 
         assertThat(wl.decide("nothing"), is(RoutingDecisionProvider.Decision.UNKNOWN));
 
         wl.save();
-        assertTrue(whitelistUserControlledList.exists());
-        assertThat(FileUtils.readFileToString(whitelistUserControlledList), is(""));
+        assertTrue(Files.exists(whitelistUserControlledList));
+        assertThat(Files.readString(whitelistUserControlledList, StandardCharsets.UTF_8), is(""));
 
         wl.add("white-1");
 
         assertThat(wl.decide("white-1"), is(RoutingDecisionProvider.Decision.ACCEPTED));
 
-        assertTrue(whitelistUserControlledList.exists());
-        assertThat(FileUtils.readFileToString(whitelistUserControlledList), containsString("white-1"));
+        assertTrue(Files.exists(whitelistUserControlledList));
+        assertThat(Files.readString(whitelistUserControlledList, StandardCharsets.UTF_8), containsString("white-1"));
         {
             StaticRoutingDecisionProvider temp = new StaticRoutingDecisionProvider();
             assertThat(temp.decide("white-1"), is(RoutingDecisionProvider.Decision.ACCEPTED));
@@ -192,7 +193,7 @@ public class StaticRoutingDecisionProvider2Test {
 
         assertThat(wl.decide("white-1"), is(RoutingDecisionProvider.Decision.ACCEPTED));
         assertThat(wl.decide("black-2"), is(RoutingDecisionProvider.Decision.REJECTED));
-        assertThat(FileUtils.readFileToString(whitelistUserControlledList), allOf(
+        assertThat(Files.readString(whitelistUserControlledList, StandardCharsets.UTF_8), allOf(
                 containsString("white-1"),
                 containsString("!black-2")
         ));
@@ -207,7 +208,7 @@ public class StaticRoutingDecisionProvider2Test {
 
         assertThat(wl.decide("white-1"), is(RoutingDecisionProvider.Decision.ACCEPTED));
         assertThat(wl.decide("black-2"), is(RoutingDecisionProvider.Decision.UNKNOWN));
-        assertThat(FileUtils.readFileToString(whitelistUserControlledList), allOf(
+        assertThat(Files.readString(whitelistUserControlledList, StandardCharsets.UTF_8), allOf(
                 containsString("white-1"),
                 not(containsString("black-2"))
         ));
@@ -222,7 +223,7 @@ public class StaticRoutingDecisionProvider2Test {
 
         assertThat(wl.decide("white-1"), is(RoutingDecisionProvider.Decision.UNKNOWN));
         assertThat(wl.decide("black-2"), is(RoutingDecisionProvider.Decision.UNKNOWN));
-        assertThat(FileUtils.readFileToString(whitelistUserControlledList), allOf(
+        assertThat(Files.readString(whitelistUserControlledList, StandardCharsets.UTF_8), allOf(
                 not(containsString("white-1")),
                 not(containsString("black-2"))
         ));
