@@ -1,13 +1,17 @@
 package org.kohsuke.stapler;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThrows;
+
 import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.Extension;
 import hudson.model.InvisibleAction;
 import hudson.model.RootAction;
 import java.lang.reflect.Field;
+import java.net.HttpURLConnection;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import javax.servlet.ServletException;
 import net.sf.json.JSONObject;
 import org.junit.Rule;
@@ -29,18 +33,20 @@ public class Security1097Test {
         j.submit(htmlPage2.getFormByName("config"));
     }
 
-    @Test(expected = FailingHttpStatusCodeException.class)
+    @Test
     public void testGet1Fails() throws Exception {
         final JenkinsRule.WebClient webClient = j.createWebClient();
         final HtmlPage htmlPage = webClient.goTo("security1097/get1");
-        j.submit(htmlPage.getFormByName("config"));
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> j.submit(htmlPage.getFormByName("config")));
+        assertEquals(HttpURLConnection.HTTP_BAD_REQUEST, e.getStatusCode());
     }
 
-    @Test(expected = FailingHttpStatusCodeException.class)
+    @Test
     public void testGet2Fails() throws Exception {
         final JenkinsRule.WebClient webClient = j.createWebClient();
         final HtmlPage htmlPage = webClient.goTo("security1097/get2");
-        j.submit(htmlPage.getFormByName("config"));
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> j.submit(htmlPage.getFormByName("config")));
+        assertEquals(HttpURLConnection.HTTP_INTERNAL_ERROR, e.getStatusCode());
     }
 
     @Test
@@ -56,7 +62,7 @@ public class Security1097Test {
             final HtmlPage htmlPage2 = webClient.goTo("security1097/get2");
             j.submit(htmlPage2.getFormByName("config"));
         } finally {
-            allowed_http_verbs_for_forms.set(null, Collections.singletonList("POST"));
+            allowed_http_verbs_for_forms.set(null, List.of("POST"));
         }
     }
 
